adjust list style to allow quiz answers to not be hidden by default (fix)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,6 +42,12 @@ ul > li{
     list-style: none;
 }
 
+/* fix for text being disabled */
+.quiz-questions > li{
+    color: white;
+    font-family:'Times New Roman', Times, serif;
+}
+
 /* buttons */
 .card,
 .reset-btn{
